# memlayer

./: .env.example  .gitignore  404.html  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  debug_canonical.py  debug_graph.py  index.html  pyproject.toml  setup.py  sitemap.xml  test_entity_deduplication.py  test_entity_extraction.py  test_hybrid_search.py  test_imports.py  test_traversal.py
API_REFERENCE/: index.html
basics/operation_modes/: index.html
basics/overview/: index.html
basics/quickstart/: index.html
basics/streaming/: index.html
docs/: operation_modes.md
docs/providers/: README.md  claude.md  gemini.md  ollama.md  openai.md
docs/services/: consolidation.md  curation.md
docs/storage/: chroma.md  networkx.md
docs/tuning/: intervals.md  operation_mode.md  salience_threshold.md
examples/: 02_proactive_task_reminders.py  README.md  balanced_tier_example.py  basic_openai_chat.py  deep_tier_example.py  fast_tier_example.py  search_tiers_demo.py  standalone_openai_example.py  test_knowledge_graph.py  tier_comparison.py
examples/01_basics/: getting_started.py
examples/02_search_tiers/: balanced_tier_example.py  deep_tier_example.py  fast_tier_example.py  search_tiers_demo.py  tier_comparison.py
examples/03_features/: memory_lifecycle.py  task_reminders.py  test_knowledge_graph.py
examples/04_benchmarks/: compare_salience_modes.py
examples/05_providers/: README.md  claude_example.py  gemini_example.py  ollama_example.py  openai_example.py
examples/06_api/: direct_knowledge_ingestion.py
memlayer/: __init__.py  client.py  config.py  embedding_models.py  ml_gate.py  observability.py  services.py
memlayer/storage/: __init__.py  base.py  chroma.py  memgraph.py  networkx.py
memlayer/wrappers/: __init__.py  base.py  claude.py  gemini.py  ollama.py  openai.py
memory_bank/: __init__.py  client.py  embedding_models.py  ml_gate.py  observability.py  services.py
memory_bank/storage/: __init__.py  chroma.py  memgraph.py  networkx.py
memory_bank/wrappers/: __init__.py  base.py  claude.py  gemini.py  ollama.py  openai.py
overrides/: main.html
providers/: index.html
providers/claude/: index.html
providers/gemini/: index.html
providers/lmstudio/: index.html
providers/ollama/: index.html
providers/openai/: index.html
search/: search_index.json
services/consolidation/: index.html
services/curation/: index.html
storage/chroma/: index.html
storage/networkx/: index.html
tests/: README.md  benchmark_cache.py  benchmark_models.py  debug_canonical.py  debug_graph.py  profile_performance.py  test_entity_deduplication.py  test_entity_extraction.py  test_hybrid_search.py  test_substring.py  test_traversal.py
tuning/intervals/: index.html
tuning/operation_mode/: index.html
tuning/salience_threshold/: index.html
