[project]
name = "memory-bank"
version = "0.1.0"
description = "Add persistent, intelligent memory to any LLM in minutes."
authors = [{ name = "Divyansh Agrawal", email = "keshav.r.1925@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "openai>=1.12.0",
    "numpy",
    "requests",
    "chromadb>=0.4.22",
    "gqlalchemy[memgraph]>=1.5.0",
    "sentence-transformers",
    "networkx>=3.1",
    "anthropic>=0.72.1",
    "google-genai>=1.50.0",
    "python-dateutil"


]