[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memlayer"
version = "0.1.0"
description = "The memory layer for LLMs - add persistent, intelligent memory to any LLM in minutes."
readme = "README.md"
authors = [{ name = "Divyansh Agrawal", email = "keshav.r.1925@gmail.com" }]
maintainers = [{ name = "Divyansh Agrawal", email = "keshav.r.1925@gmail.com" }]
license = "MIT"
keywords = [
    "llm", 
    "memory", 
    "ai", 
    "openai", 
    "claude", 
    "gemini", 
    "ollama",
    "anthropic",
    "chatbot",
    "conversational-ai",
    "knowledge-graph", 
    "vector-search",
    "vector-database",
    "embedding",
    "semantic-search",
    "rag",
    "retrieval",
    "chromadb",
    "networkx",
    "nlp",
    "natural-language-processing",
    "machine-learning",
    "persistent-memory",
    "context-management",
    "ai-memory",
    "llm-memory",
    "memory-layer",
    "stateful-llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.12.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "chromadb>=0.4.22",
    "gqlalchemy>=1.5.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.1",
    "anthropic>=0.72.1",
    "google-genai>=1.50.0",
    "python-dateutil>=2.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/divagr18/memorylayer"
Repository = "https://github.com/divagr18/memorylayer"
Documentation = "https://github.com/divagr18/memorylayer#readme"
Issues = "https://github.com/divagr18/memorylayer/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["memory_bank*"]
exclude = ["tests*", "examples*", "docs*", "*.egg-info*", "__pycache__*"]

[tool.setuptools.package-data]
memory_bank = ["py.typed"]